index home btn ref

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <h1>Card Optimizer</h1>
         <nav>
           <ul>
-            <li><a href="/">
+            <li><a href="index.html">
               <img src="./logo/wallet.png" class="header-btn" alt="wallet">
             </a></li>
           </ul>
